--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1625,6 +1625,12 @@ Mappings:
       PVWA: ami-0b9a74b60728d8000
       PSM: ami-0d99de18cca368e15
       PSMP: ami-0fb8551089808cc9f
+    me-south-1:
+      Vault: ami-1234
+      CPM: ami-1234
+      PVWA: ami-1234
+      PSM: ami-1234
+      PSMP: ami-1234
     us-gov-west-1:
       Vault: ami-0e5100972290c3cf9
       CPM: ami-0b1606b1e7656ca98
