--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -764,7 +764,7 @@ Resources:
                 adminpassword=`aws ssm get-parameters --names $2 --region $3 \
                 --with-decryption --output text --query Parameters[0].Value`
                 /opt/CARKpsmp/bin/createcredfile /root/CD-Image/user.cred \
-                Password -Username $1 -Password $adminpassword -HostName
+                Password -Username $1 -Password $adminpassword -EntropyFile
           commands:
             1-ScriptsPermissions:
               command: >-
@@ -786,7 +786,7 @@ Resources:
                   hostname=`curl
                   http://169.254.169.254/latest/meta-data/instance-id` &&
                   /root/CD-Image/register_and_activation.sh
-                  /root/CD-Image/user.cred ${VaultIpAddress} $EntropyFile
+                  /root/CD-Image/user.cred ${VaultIpAddress} $hostname
                 - VaultIpAddress: !If
                     - DRValueEmpty
                     - !Sub '${VaultPrivateIP}'
