--- a/aws/PTA-Single-Deployment.yaml
+++ b/aws/PTA-Single-Deployment.yaml
@@ -40,12 +40,12 @@ Resources:
                   - 's3:DeleteObject'
                   - 's3:DeleteObjectVersion'
                 Resource:
-                  - !Join 
+                  - !Join
                     - ''
                     - - 'arn:aws:s3:::'
                       - !Ref DeployBucket
                       - /*
-                  - !Join 
+                  - !Join
                     - ''
                     - - 'arn:aws:s3:::'
                       - !Ref PTALicenseBucket
@@ -103,11 +103,11 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-                  
+
       Runtime: python3.7
       Timeout: 60
       Handler: index.lambda_handler
-      Role: !GetAtt 
+      Role: !GetAtt
         - LambdaDeployRole
         - Arn
     Condition: EULACondition
@@ -132,7 +132,7 @@ Resources:
               physicalResourceId = str(uuid.uuid4())
               if 'PhysicalResourceId' in event:
                   physicalResourceId = event['PhysicalResourceId']
-              
+
               try:
                   if event['RequestType'] == 'Create':
                       deletePassword(event['ResourceProperties']['key'])
@@ -147,18 +147,18 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-                  
+
       Runtime: python3.7
       Timeout: 60
       Handler: index.lambda_handler
-      Role: !GetAtt 
+      Role: !GetAtt
         - LambdaDeployRole
         - Arn
     Condition: EULACondition
   StoreAdminPassword:
     Type: 'AWS::CloudFormation::CustomResource'
     Properties:
-      ServiceToken: !GetAtt 
+      ServiceToken: !GetAtt
         - StorePasswordLambda
         - Arn
       Password: !Ref VaultAdminPassword
@@ -169,10 +169,10 @@ Resources:
     Type: 'AWS::CloudFormation::CustomResource'
     Version: '1.0'
     Properties:
-      ServiceToken: !GetAtt 
+      ServiceToken: !GetAtt
         - DeletePasswordLambda
         - Arn
-      key: !GetAtt 
+      key: !GetAtt
         - StoreAdminPassword
         - SsmId
     Condition: EULACondition
@@ -208,17 +208,17 @@ Resources:
           Value: !Ref PTAInstanceName
       SecurityGroupIds: !Ref PTAInstanceSecurityGroups
       SubnetId: !Ref PTAInstanceSubnetId
-      ImageId: !FindInMap 
+      ImageId: !FindInMap
         - RegionMap
         - !Ref 'AWS::Region'
         - PTA
       InstanceType: !Ref PTAInstanceType
-      UserData: !Base64 
+      UserData: !Base64
         'Fn::Sub': >
           #!/bin/bash -e
 
           cfn-init -v --stack ${AWS::StackName} --resource PTAMachine --configsets install_all --region ${AWS::Region}
-          
+
           cfn-signal -e $? --stack ${AWS::StackName} --resource PTAMachine --region ${AWS::Region}
 
       KeyName: !Ref KeyName
@@ -231,46 +231,46 @@ Resources:
         install_pta:
           files:
             /tmp/deploy.py:
-              content: !Sub | 
+              content: !Sub |
                 import boto3
-                import time 
-                
+                import time
+
                 time.sleep(120)
 
                 def downloadFile(bucket,filePath,target):
                     s3Client = boto3.client('s3', region_name='${AWS::Region}')
                     s3Client.download_file(Bucket = bucket, Key = filePath, Filename = target)
                     return target
-                    
+
                 licensef = downloadFile('${PTALicenseBucket}', '${LicenseFile}', '/opt/tomcat/diamond-resources/license.xml')
-                
+
             /tmp/register.sh:
-              content: !Sub | 
+              content: !Sub |
                 #!/bin/bash
 
-                export vault_ip=${VaultPrivateIP} 
+                export vault_ip=${VaultPrivateIP}
                 export vault_adminUser=${VaultAdminUser}
                 export vault_adminPassword=${VaultAdminPassword}
                 export pvwa_host=${PVWAPrivateDNS}
                 export vault_timezone=${VaultTimeZone}
                 export timezone=${PTAServerTimeZone}
                 export vault_port=1858
-                
+
                 if [ ! -z "${DRPrivateIP}" ]; then
                     export vault_ipsDR=${DRPrivateIP}
                 fi;
 
                 echo $vault_ip
-                echo $vault_ipsDR 
-                echo $vault_timezone 
-                echo $timezone 
-                echo $vault_port 
-                echo $vault_adminUser 
-                echo $vault_adminPassword 
+                echo $vault_ipsDR
+                echo $vault_timezone
+                echo $timezone
+                echo $vault_port
+                echo $vault_adminUser
+                echo $vault_adminPassword
                 echo $pvwa_host
 
                 python /opt/tomcat/utility/internal/ptaAutomaticConfiguration.py aws
-                    
+
               mode: '000755'
           commands:
             01-copylicensefrombucket:
@@ -331,7 +331,7 @@ Parameters:
     Type: String
     Description: >-
       Enter the time zone of the PTA Server.
-      https://cyberarkdocu.azurewebsites.net/Product-Doc/OnlineHelp/PAS/Latest/en/Content/PTA/Appendix-B-Time-Zones.htm 
+      https://cyberarkdocu.azurewebsites.net/Product-Doc/OnlineHelp/PAS/Latest/en/Content/PTA/Appendix-B-Time-Zones.htm
   VaultPrivateIP:
     Type: String
     Description: Enter the IP of the Vault instance.
@@ -339,7 +339,7 @@ Parameters:
     Type: String
     Description: >-
       Enter the IPs of the Vault DR instances, separated by comma (,).
-      (Optional). 
+      (Optional).
   VaultTimeZone:
     Type: String
     Description: Enter the time zone of the Vault Server.
@@ -374,10 +374,10 @@ Parameters:
     Type: 'AWS::EC2::Subnet::Id'
     Description: Select the Subnet Id where the PTA instance will reside.
 Conditions:
-  EULACondition: !Equals 
+  EULACondition: !Equals
     - Accept
     - !Ref EULA
-  DRValueEmpty: !Equals 
+  DRValueEmpty: !Equals
     - ''
     - !Ref DRPrivateIP
 Metadata:
@@ -470,3 +470,9 @@ Mappings:
       PTA: ami-071d36b6415462a72
     eu-west-3:
       PTA: ami-06c0ee40efde875ed
+    me-south-1:
+      PTA: ami-1234
+    us-gov-west-1:
+      PTA: ami-1234
+    us-gov-east-1:
+      PTA: ami-1234
