--- a/aws/PTA-Single-Deployment.yaml
+++ b/aws/PTA-Single-Deployment.yaml
@@ -40,12 +40,12 @@ Resources:
                   - 's3:DeleteObject'
                   - 's3:DeleteObjectVersion'
                 Resource:
-                  - !Join 
+                  - !Join
                     - ''
                     - - 'arn:aws:s3:::'
                       - !Ref DeployBucket
                       - /*
-                  - !Join 
+                  - !Join
                     - ''
                     - - 'arn:aws:s3:::'
                       - !Ref PTALicenseBucket
@@ -103,11 +103,11 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-                  
+
       Runtime: python3.7
       Timeout: 60
       Handler: index.lambda_handler
-      Role: !GetAtt 
+      Role: !GetAtt
         - LambdaDeployRole
         - Arn
     Condition: EULACondition
@@ -132,7 +132,6 @@ Resources:
               physicalResourceId = str(uuid.uuid4())
               if 'PhysicalResourceId' in event:
                   physicalResourceId = event['PhysicalResourceId']
-              
               try:
                   if event['RequestType'] == 'Create':
                       deletePassword(event['ResourceProperties']['key'])
@@ -147,18 +146,18 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-                  
+
       Runtime: python3.7
       Timeout: 60
       Handler: index.lambda_handler
-      Role: !GetAtt 
+      Role: !GetAtt
         - LambdaDeployRole
         - Arn
     Condition: EULACondition
   StoreAdminPassword:
     Type: 'AWS::CloudFormation::CustomResource'
     Properties:
-      ServiceToken: !GetAtt 
+      ServiceToken: !GetAtt
         - StorePasswordLambda
         - Arn
       Password: !Ref VaultAdminPassword
@@ -169,10 +168,10 @@ Resources:
     Type: 'AWS::CloudFormation::CustomResource'
     Version: '1.0'
     Properties:
-      ServiceToken: !GetAtt 
+      ServiceToken: !GetAtt
         - DeletePasswordLambda
         - Arn
-      key: !GetAtt 
+      key: !GetAtt
         - StoreAdminPassword
         - SsmId
     Condition: EULACondition
@@ -208,17 +207,16 @@ Resources:
           Value: !Ref PTAInstanceName
       SecurityGroupIds: !Ref PTAInstanceSecurityGroups
       SubnetId: !Ref PTAInstanceSubnetId
-      ImageId: !FindInMap 
+      ImageId: !FindInMap
         - RegionMap
         - !Ref 'AWS::Region'
         - PTA
       InstanceType: !Ref PTAInstanceType
-      UserData: !Base64 
+      UserData: !Base64
         'Fn::Sub': >
           #!/bin/bash -e
 
           cfn-init -v --stack ${AWS::StackName} --resource PTAMachine --configsets install_all --region ${AWS::Region}
-          
           cfn-signal -e $? --stack ${AWS::StackName} --resource PTAMachine --region ${AWS::Region}
 
       KeyName: !Ref KeyName
@@ -231,46 +229,45 @@ Resources:
         install_pta:
           files:
             /tmp/deploy.py:
-              content: !Sub | 
+              content: !Sub |
                 import boto3
-                import time 
-                
+                import time
+
                 time.sleep(120)
 
                 def downloadFile(bucket,filePath,target):
                     s3Client = boto3.client('s3', region_name='${AWS::Region}')
                     s3Client.download_file(Bucket = bucket, Key = filePath, Filename = target)
                     return target
-                    
+
                 licensef = downloadFile('${PTALicenseBucket}', '${LicenseFile}', '/opt/tomcat/diamond-resources/license.xml')
-                
+
             /tmp/register.sh:
-              content: !Sub | 
+              content: !Sub |
                 #!/bin/bash
 
-                export vault_ip=${VaultPrivateIP} 
+                export vault_ip=${VaultPrivateIP}
                 export vault_adminUser=${VaultAdminUser}
                 export vault_adminPassword=${VaultAdminPassword}
                 export pvwa_host=${PVWAPrivateDNS}
                 export vault_timezone=${VaultTimeZone}
                 export timezone=${PTAServerTimeZone}
                 export vault_port=1858
-                
                 if [ ! -z "${DRPrivateIP}" ]; then
                     export vault_ipsDR=${DRPrivateIP}
                 fi;
 
                 echo $vault_ip
-                echo $vault_ipsDR 
-                echo $vault_timezone 
-                echo $timezone 
-                echo $vault_port 
-                echo $vault_adminUser 
-                echo $vault_adminPassword 
+                echo $vault_ipsDR
+                echo $vault_timezone
+                echo $timezone
+                echo $vault_port
+                echo $vault_adminUser
+                echo $vault_adminPassword
                 echo $pvwa_host
 
                 python /opt/tomcat/utility/internal/ptaAutomaticConfiguration.py aws
-                    
+
               mode: '000755'
           commands:
             01-copylicensefrombucket:
@@ -331,7 +328,7 @@ Parameters:
     Type: String
     Description: >-
       Enter the time zone of the PTA Server.
-      https://cyberarkdocu.azurewebsites.net/Product-Doc/OnlineHelp/PAS/Latest/en/Content/PTA/Appendix-B-Time-Zones.htm 
+      https://cyberarkdocu.azurewebsites.net/Product-Doc/OnlineHelp/PAS/Latest/en/Content/PTA/Appendix-B-Time-Zones.htm
   VaultPrivateIP:
     Type: String
     Description: Enter the IP of the Vault instance.
@@ -339,7 +336,7 @@ Parameters:
     Type: String
     Description: >-
       Enter the IPs of the Vault DR instances, separated by comma (,).
-      (Optional). 
+      (Optional).
   VaultTimeZone:
     Type: String
     Description: Enter the time zone of the Vault Server.
@@ -374,12 +371,9 @@ Parameters:
     Type: 'AWS::EC2::Subnet::Id'
     Description: Select the Subnet Id where the PTA instance will reside.
 Conditions:
-  EULACondition: !Equals 
+  EULACondition: !Equals
     - Accept
     - !Ref EULA
-  DRValueEmpty: !Equals 
-    - ''
-    - !Ref DRPrivateIP
 Metadata:
   'AWS::CloudFormation::Interface':
     ParameterGroups:
@@ -441,32 +435,38 @@ Metadata:
 Mappings:
   RegionMap:
     us-east-1:
-      PTA: ami-067810abfed5f92b0
+      PTA: ami-057386a54facf83d3
     us-east-2:
-      PTA: ami-0eff7a81246d001d8
+      PTA: ami-08ab50f7213bffba8
     eu-west-2:
-      PTA: ami-0dc10ea3098ad69db
+      PTA: ami-01482124541e569bd
     us-west-1:
-      PTA: ami-0b3d78d239d55509e
+      PTA: ami-0e790df828a8ac036
     us-west-2:
-      PTA: ami-063e67533878a4e27
+      PTA: ami-0c71b81bb24103af9
     ca-central-1:
-      PTA: ami-09746870593f38cda
+      PTA: ami-08d9d984dc0f5575e
     eu-west-1:
-      PTA: ami-0b32579d6f3ed35ba
+      PTA: ami-08f48f357ad4505ce
     eu-central-1:
-      PTA: ami-0bc38743c9254c5d3
+      PTA: ami-0aebb24c0918df88d
     ap-southeast-1:
-      PTA: ami-00c3b7d02343bb21d
+      PTA: ami-09ebb6dc542184d32
     ap-southeast-2:
-      PTA: ami-0e5ce5e19999d7697
+      PTA: ami-0bd920b1e4929d68c
     ap-northeast-2:
-      PTA: ami-091b1bd9fdd64fe81
+      PTA: ami-01e69b24306c1d6bf
     ap-northeast-1:
-      PTA: ami-0777a9ab951a1e239
+      PTA: ami-069c058631e1b90ea
     ap-south-1:
-      PTA: ami-00844e58910ba2c39
+      PTA: ami-0b8a1789d56e5cb90
     sa-east-1:
-      PTA: ami-071d36b6415462a72
+      PTA: ami-0b1457604c053cbab
     eu-west-3:
-      PTA: ami-06c0ee40efde875ed
+      PTA: ami-06946f1da4e5e18b6
+    me-south-1:
+      PTA: ami-08dbcbb3830cc0566
+    us-gov-west-1:
+      PTA: ami-09be91bb6569dae81
+    us-gov-east-1:
+      PTA: ami-0e3b8979953d68ae0
