--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1109,7 +1109,7 @@ Resources:
             /etc/awslogs/awslogs.conf:
               content: !Sub |
                 [general]
-                state_file= /var/awslogs/state/agent-state
+                state_file= /var/lib/awslogs/state/agent-state
                 [/var/log/cloud-init.log]
                 file = /var/log/cloud-init.log
                 log_group_name = ${LogGroup}
@@ -1157,7 +1157,7 @@ Resources:
             01-CreateCredFile:
               command: !Sub >-
                 sudo /opt/CARKpsmp/bin/createcredfile /root/CD-Image/user.cred
-                Password -Username Administrator -Password ${VaultAdminPassword} -Hostname
+                Password -Username Administrator -Password ${VaultAdminPassword} -EntropyFile
             02-PSMPdeploy:
               command:
                 'Fn::Sub':
