--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -695,7 +695,7 @@ Resources:
             /etc/awslogs/awslogs.conf:
               content: !Sub |
                 [general]
-                state_file= /var/awslogs/state/agent-state
+                state_file= /var/lib/awslogs/state/agent-state
                 [/var/log/cloud-init.log]
                 file = /var/log/cloud-init.log
                 log_group_name = ${LogGroup}
@@ -730,7 +730,7 @@ Resources:
               group: root
           commands:
             01_create_state_directory:
-              command: mkdir -p /var/awslogs/state
+              command: mkdir -p /var/lib/awslogs/state
               waitAfterCompletion: 0
           services:
             sysvinit:
@@ -764,7 +764,7 @@ Resources:
                 adminpassword=`aws ssm get-parameters --names $2 --region $3 \
                 --with-decryption --output text --query Parameters[0].Value`
                 /opt/CARKpsmp/bin/createcredfile /root/CD-Image/user.cred \
-                Password -Username $1 -Password $adminpassword -HostName
+                Password -Username $1 -Password $adminpassword -EntropyFile
           commands:
             1-ScriptsPermissions:
               command: >-
