--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1145,13 +1145,10 @@ Resources:
           commands:
             01_create_state_directory:
               command: mkdir -p /var/lib/awslogs/state
-          services:
-            sysvinit:
-              awslogs:
-                enabled: true
-                ensureRunning: true
-                files:
-                  - /etc/awslogs/awslogs.conf
+            02_start_awslogsd:
+              command: systemctl start awslogsd
+            03_enable_awslogsd:
+              command: systemctl enable awslogsd
         install_psmp:
           commands:
             01-CreateCredFile:
