--- a/aws/PTA-Single-Deployment.yaml
+++ b/aws/PTA-Single-Deployment.yaml
@@ -213,9 +213,9 @@ Resources:
         - PTA
       InstanceType: !Ref PTAInstanceType
       UserData: !Base64
-        'Fn::Sub': >
-          #!/bin/bash -e;
-          cfn-init -v --stack ${AWS::StackName} --resource PTAMachine --configsets install_all --region ${AWS::Region};
+        'Fn::Sub': |
+          #!/bin/bash -e
+          cfn-init -v --stack ${AWS::StackName} --resource PTAMachine --configsets install_all --region ${AWS::Region}
           cfn-signal -e $? --stack ${AWS::StackName} --resource PTAMachine --region ${AWS::Region}
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
